# innoeval-demo

./: .env.example  .gitignore  README.md  RUNNING.md  api_client.py  common.py  llm_utils.py  prompts.py  renderers.py  run_demo.py  schemas.py  search_planner.py  search_reranker.py  tasks.py
examples/: task1_params.cpu.local.json  task1_params.local.example.json  task1_request.json  task4_request.json
local_pipelines/: grounding_pipeline.py  pdf_xml_pipeline.py
showcase/: README.md
showcase/innoeval-search/: README.md  pyproject.toml
showcase/innoeval-search/src/innoeval_search/combined/: merge_search.py
showcase/innoeval-search/src/innoeval_search/kg/: config.py
showcase/innoeval-search/src/innoeval_search/s2/: keyword_extractor.py
tests/: test_demo.py
