[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "innoeval-search"
version = "0.1.0"
description = "Standalone search logic extracted from InnoEval."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "neo4j>=5,<6",
  "sentence-transformers>=3,<4",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
]

[project.scripts]
innoeval-search = "innoeval_search.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
